--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,12 @@
-
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-    <script src="/static/js/jquery.1.9.1.js"></script>
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <script src="{% static 'js/jquery.1.9.1.js' %}"></script>
 {#    <script src="{% static 'js/jquery.min.js' %}"></script>#}
-    <script src="/static/js/bootstrap.js"></script>
+    <script src="{% static 'js/bootstrap.js' %}"></script>
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
