优化后台方法，删除不必要方法

--- a/templates/shop.html
+++ b/templates/shop.html
@@ -216,7 +216,7 @@ function add_area() {
 
              <div class="modal-body ">
                    <div class="container">
-                       <form class="form-group col-md-5" method="get" action="{% url 'addshop'%}" id="form_data">
+                       <form class="form-group col-md-5" method="get"  id="form_data">
                            <div class="input-group">
                                 <span class="input-group-addon">系统名称</span>
                                 <input type="text" class="form-control" name="sys_name">
