优化批量导入的方法 优化前端显示界面

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,10 +11,10 @@
 </head>
 <body>
 <!-- 导航 -->
-<nav class="navbar navbar-default navbar-top" role="navigation">
+<nav class="navbar navbar-default navbar-top navbar-fixed-top" role="navigation">
     <!--导航骨架：汉堡按钮及导航条LOGO-->
     <div class="navbar-header">
-        <span class="navbar-brand">&gtROYDX ERP系统数据核对&lt</span>
+        <span class="navbar-brand">门店数据核对系统</span>
 
         <!-- 响应式导航面包按钮 -->
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#example-navbar">
@@ -31,14 +31,16 @@
     <div class="collapse navbar-collapse" id="example-navbar">
         <ul class="nav navbar-nav">
            <li><a href="{% url 'diff' %}">添加数据</a> </li>
-           <li ><a href="{% url 'shop'%}">店铺信息</a> </li>
+           <li ><a href="{% url 'shop'%}">档案管理</a> </li>
 {#           <li ><a href="/diff/">数据差异</a> </li>#}
         </ul>
     </div>
     <!-- 导航主体 -->
 </nav>
 <!-- 导航 -->
-
+<div class="container" style="padding-top: 50px;">
+    <p>&nbsp;</p>
+</div>
 {% block content %}{% endblock %}
 </body>
 </html>
